# ansible_modules

./: .ansible-lint  .ansible-lint-ignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .yamllint  .yamllint.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ansible.cfg  galaxy.yml  install.sh  pyproject.toml  requirements.txt  requirements.yml  tasks.py  test-requirements.txt  tox-ansible.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  documentation_change.yaml  feature_request.yaml  issue.md  new-issue.md  new-issue.md.old  report.md
.github/workflows/: main.yml  release.yml  tests.yml
changelogs/: .plugin-cache.yaml  changelog.yaml  config.yaml
changelogs/fragments/: 1182-fix-contact-groups.yml  1273-ability-to-rename-host-inventory-vars.yml  1275-feature-netbox_cluster-adds-status-field.yml  1276-feature-netbox_cluster_group-adds-description-field.yml  1281_move_prefix_lookup_to_secondary.yml  1287-new-module-vpn-tunnels.yml  1293-added-primary-ip4-netmask-to-output.yml  1295-nb_inventory_admin_service_name_with_ip_as_primary_ip  1307-feature-netbox_vlan_group-add-vid_ranges.yml  1309-feature-add-serial-number-to-vm.yml  1312-add-hostname_field-option.yml  1323-fixing-bug-#975.yml  1327-add-custom-headers.yml  1332-add-hostname_field-option.yml  1333-feature-netbox_device_interface_template.yml  1335-api-status-page-not-found.yml  1339-name-to-fhrp-group.yml  1346-template-any-field-host.yml  1349-add-additional-fhrp-arguments.yaml  1356-add-modules-to-action-groups.yml  1433-add-custom-headers.yml  1435-fix-duplicate-task-name.yml  1437-fix-sevral-bug-discovered-by-integration-tests.yml  1438-fix-inventory-service-collection.yml  1439-fix-sevral-bug-discovered-by-integration-tests.yml  1459-add-netbox-data-sources.yml  1462-fix-pylint-errors.yml  1464-fix-mac-lookup-by-id.yml  1469-fix-old-apis.yml  1479-fix-services_parent_object.yml  1486-fix-list-as-set.yml  1488-bad-return-value-key-fix.yml  1499-fix-regex-pattern.yml  2.11-changes.yml  41_updates.yml  619-v3.0-ci-fixes.yml  action_groups_config_template.yml  add-custom-headers.yml  allow-jinja2.yml  ci_netbox41.yml  (+28 more)
docs/: conf.py  index.rst  requirements.txt
docs/_extensions/: pygments_lexer.py
docs/_static/: ansible.css  pygments.css
hacking/: black.sh  build.sh  get_inventory_query_parameters.py  local-test.sh  make-docs.sh  update_test_inventories.sh
meta/: execution-environment.yml  runtime.yml
scripts/: get_inventory_query_parameters.py
tests/: config.yml  test_data.py
(+970 files in other folders)
