[tool.poetry]
name = "netbox_ansible_modules"
version = "3.13.0"
description = "Ansible collection to interact with NetBox's API"
authors = ["Mikhail Yohman <mikhail.yohman@gmail.com>", "Martin Rødvand <martin@rodvand.net>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
ansible-core = "2.14.3"
black = "*"
codecov = "*"
coverage = "6.5.*"
deepdiff = "*"
cryptography = "*"
jinja2 = "*"
jmespath = "*"
pynetbox = "^7"
pytest = "*"
pytest-mock = "*"
pytest-xdist = "*"
pytest-forked = "*"
pyyaml = "*"
mock = "^4.0.2"
antsibull = "*"
importlib-metadata = "*"
pylint = "*"
pytz = "*"
packaging = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 155

[tool.black]
line-length = 155

[tool.ruff]
# Same as Black.
line-length = 155
# Never enforce `E402` Module level import not at top of file.
ignore = ["E402"]
