[tool.poetry]
name = "netbox_ansible_modules"
version = "3.19.1"
description = "Ansible collection to interact with NetBox's API"
authors = ["Mikhail Yohman <mikhail.yohman@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
ansible-core = "2.15.9"
black = "*"
codecov = "*"
coverage = "6.5.*"
deepdiff = "*"
cryptography = "*"
jinja2 = "*"
jmespath = "*"
pynetbox = "^7.3"
pytest = "*"
pytest-mock = "*"
pytest-xdist = "*"
pytest-forked = "*"
pyyaml = "*"
mock = "^4.0.2"
antsibull = "*"
importlib-metadata = "*"
pylint = "*"
pytz = "*"
packaging = "*"
importlib-resources = "*"
antsibull-docs = "^2.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
